--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,15 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-    
+      <nav class="site-navigation">
+    <ul>
+      {% for page in site.header_pages %}
+        <li>
+          <a href="{{ page.url }}" class="nav-link">{{ page.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+  </nav>
     </header>
     <main id="content" class="main-content" role="main">
       {{ content }}
