--- a/style.css
+++ b/style.css
@@ -7,3 +7,30 @@
 .navbar .github {
   display: none !important;
 }
+
+/* Basic styles for the navigation bar */
+.site-navigation {
+  background-color: #333;
+  padding: 10px;
+}
+
+.site-navigation ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.site-navigation li {
+  margin-right: 20px;
+}
+
+.site-navigation .nav-link {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.site-navigation .nav-link:hover {
+  text-decoration: underline;
+}
