--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <nav class="site-navigation">
+  <!-- Navigation bar -->
+  <nav class="site-navigation">
     <ul>
       {% for page in site.header_pages %}
         <li>
